--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.CustomizedAnimationActivity"></activity>
+        <activity android:name=".activity.TweenAnimationActivity"></activity>
+        <activity android:name=".activity.FrameAnimationActivity" />
+        <activity android:name=".activity.CustomizedAnimationActivity" />
         <activity android:name=".activity.ViewAnimationActivity" />
         <activity android:name=".activity.LayoutAnimationActivity" />
         <activity android:name=".MainActivity">
